-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.0.0
-
Fix Version/s: 5.0.0 Beta 1, 5.0.0
-
Component/s: D-Bus
-
Labels:None
-
Commits:e02a144a3c8e7858d879ac2d0038bc7d00906ae6 65e75acd05b16fea11d85f3a6a330d50c8ce7c5d f18a6c5fb569ab93e86ca4b75301a7495ba17768
Nokia Legal have requested that Qt code should stop using the name "Trolltech". Various code related to QtDBus still contains the string "com.trolltech.Qt". This should be changed before the Qt 5.0.0 release, as leaving the change until later would most likely cause behavioural compatibility problems in future releases.
- is required for
-
QTBUG-25005 Critical issues for Qt5 Beta 1
-
- Closed
-