Update the error codes in QtDBus

Change the old com.trolltech ones to org.qtproject and introduce Use
the alternate domain name for the Qt Project because the dash
character is not valid in interface and error names.

Task-number: QTBUG-23274
Change-Id: Iac1699e70525d67f983c10560932acff6b2ecde6
Reviewed-by: Lars Knoll <lars.knoll@nokia.com>
Reviewed-by: Jason McDonald <jason.mcdonald@nokia.com>

cregit: 65e75acd05b16fea11d85f3a6a330d50c8ce7c5d https://github.com/qt/qtbase/commit/65e75acd05b16fea11d85f3a6a330d50c8ce7c5d